# kedro-intermediate-training

./: .gitignore  .gitpod.yml  README.md
completed-kedro-inspect/: pyproject.toml  setup.py
completed-kedro-inspect/kedro_inspect/: cli_plugin.py  plugin.py
completed-spaceflights/: README.md  pyproject.toml
completed-spaceflights/conf/base/: catalog.yml  logging.yml
completed-spaceflights/conf/base/parameters/: data_filtering.yml
completed-spaceflights/docs/source/: conf.py
completed-spaceflights/src/: requirements.txt
completed-spaceflights/src/spaceflights/: cli.py  hooks.py  pipeline_registry-2.py  pipeline_registry.py  settings.py
completed-spaceflights/src/spaceflights/pipelines/data_filtering/: README.md  __init__.py  nodes.py  pipeline.py
completed-spaceflights/src/spaceflights/pipelines/data_processing/: nodes.py  pipeline.py
completed-spaceflights/src/spaceflights/pipelines/data_science/: nodes.py  pipeline.py
completed-spaceflights/src/tests/: test_run.py
kedro-inspect/: setup.py
kedro-inspect/kedro_inspect/: cli_plugin.py  plugin.py
spaceflights/src/: requirements.in  requirements.txt  setup.py
spaceflights/src/spaceflights/: __main__.py  cli.py  hooks.py  pipeline_registry-2.py  pipeline_registry.py
spaceflights/src/spaceflights/pipelines/data_processing/: pipeline.py
spaceflights/src/spaceflights/pipelines/data_science/: README.md  pipeline.py
spaceflights/src/tests/: test_run.py
